--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.1"
   },
