--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-multi-date-picker": "^4.5.2",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
