--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-multi-date-picker": "^4.5.2",
+    "react-responsive": "^10.0.0",
+    "react-select": "^5.10.0",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
