--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
+    "jalali-moment": "^3.3.11",
     "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
